--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.3 
	- Fixed a redirect to a blank page if you hit play selected when
		nothing was selected (Thx Chenb)
	- Added detection of old config files, message displayed to admins
		upon login
	- Fixed an issue with WMP11 and Lock Songs that prevented playback
		due to the way Now Playing was being calculated
	- Fixed comment searching, broken when split out into its own
		table
	- Fixed a issue with Catalog builds in Windows 
	- Fixed a bug with admins ability to set the preferences of a 
		specific user
	- Fixed logic on force http that was causing it not to work under
		specific configurations
	- Fixed a flagged and rated item clean issue with catalogs
	- Fixed some minor issues in HttpQ and MPD localplay controllers
  	- Fixed Album Art search on Catalog add so that it only searches
		albums that currently don't have art
  	- Fixed a long outstanding issue with Windows Shared drives and
		the incorrect slashes and speed up catalog builds a tiny
		bit
	- Improve speed, sanity of single album art search
	- Fixed a logic issue with force_http_play
	- Improved performance of Amazon album art search by reducing the
		queries made on gather album art
	- Fixed an issue with all numeric usernames
	- Fixed some minor catalog cleaning issues that could arise due
		to the order of the clean functions
	- Added missing functions to the HttpQ controller, should now have
		all capabilities that MPD has. 
	- Fixed minor ajax issue with localplay buttons
	- Fixed issue with Add to Catalogs always searching for all
		album art making it really slow
	- Fixed typo in session management that prevented setting of
		secure_cookie option (used default value)