@@ -4,6 +4,7 @@
 
 --------------------------------------------------------------------------
   v.3.3.3 
+	- Fixed some refresh issues on the localplay page
 	- Fixed a redirect to a blank page if you hit play selected when
 		nothing was selected (Thx Chenb)
 	- Added detection of old config files, message displayed to admins
